@@ -256,6 +256,31 @@
         </plugins>
     </build>
 
+    <profiles>
+        <profile>
+            <id>release-9</id>
+            <build>
+              <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <configuration>
+                        <excludePackageNames>com.sun.xml.ws.*</excludePackageNames>
+                        <additionalJOptions>
+                            <additionalJOption>--add-modules</additionalJOption>
+                            <additionalJOption>java.activation</additionalJOption>
+                            <additionalJOption>--add-exports</additionalJOption>
+                            <additionalJOption>java.security.jgss/sun.security.krb5=ALL-UNNAMED</additionalJOption>
+                            <additionalJOption>--add-exports</additionalJOption>
+                            <additionalJOption>java.xml/com.sun.org.apache.xerces.internal.impl.dv.util=ALL-UNNAMED</additionalJOption>
+                        </additionalJOptions>
+                    </configuration>
+                </plugin>
+              </plugins>
+             </build>
+        </profile>
+    </profiles>
+
     <dependencies>
 
         <!-- Provided dependencies -->
